# hotreload

./: .gitignore  Cargo.toml  README.md  install.sh
hotreload-demo-uikit/.hotreload/: config.toml
hotreload-demo-uikit/DemoUIKit.xcodeproj/: project.pbxproj
hotreload-demo-uikit/Sources/DemoUIKit/: AppDelegate.swift  Info.plist  ProfileViewController.swift  SceneDelegate.swift
hotreload-demo/.claude/skills/: verifier-hotreload.md
hotreload-demo/.hotreload/: config.toml
hotreload-demo/DemoApp.xcodeproj/: project.pbxproj
hotreload-demo/DemoApp.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
hotreload-demo/DemoApp.xcodeproj/xcshareddata/xcschemes/: DemoApp.xcscheme
hotreload-demo/Sources/DemoApp/: AddTodoSheet.swift  ContentView.swift  DemoApp.swift  GreetingBanner.swift  Info.plist  TodoDetailView.swift  TodoEmptyView.swift  TodoFilterBar.swift  TodoModel.swift  TodoRowView.swift  TodoStatsView.swift  TodoStore.swift
src/: cli.rs  compiler.rs  config.rs  error.rs  injector.rs  main.rs  server.rs  watcher.rs  xcode.rs
src/commands/: init.rs  inject.rs  log.rs  mod.rs  status.rs  watch.rs
templates/skills/: hotreload.md
